# octave-deb

./: .gitignore  AUTHORS  BUGS  Cargo.toml  ChangeLog  HG-ID  INSTALL.OCTAVE  LICENSE  Makefile.in  aclocal.m4  config.in.h  configure  readme.md
debian/: README.Debian  changelog  clean  control  copyright  copyright-scan-patterns.yml  fill.copyright.blanks.yml  liboctave-dev.install  liboctave5.install  liboctave5.lintian-overrides  liboctave6.install  liboctave6.lintian-overrides  liboctave7.install  liboctave7.lintian-overrides  octave-doc.doc-base.lib  octave-doc.doc-base.manual  octave-doc.doc-base.refcard  octave-htmldoc.doc-base.lib  octave-htmldoc.doc-base.manual  octave.install  octave.lintian-overrides  rules  watch
debian/patches/: abi-bump.patch  add-corrcoef-function.patch  always-build-octave-jar.patch  assume-blas-integer-size.patch  drop_versioned_binaries.diff  install_libraries_publically  java9.patch  missing-inplace_edit.patch  octave-pkgbuilddir.patch  qscintilla-rename.patch  series  strncmp.patch  texinfo.patch  unimplemented-functions.patch
debian/source/: options
debian/tests/: control  smoke  upstream-testsuite
debian/upstream/: metadata  signing-key.asc
doc/interpreter/: arith.texi  audio.texi  basics.texi  bugs.texi  container.texi  contributors.texi  convhull.eps  cp-idx.texi  data.texi  debug.texi  delaunay.eps  diagperm.texi  diffeq.texi  doc-cache  errorbar.eps  errors.texi  eval.texi  expr.texi  extended.eps  (+92 more)
libgnu/: Makefile.am  Makefile.in
libinterp/: DOCSTRINGS
m4/: gnulib-cache.m4  gnulib-comp.m4
scripts/: DOCSTRINGS
(+2904 files in other folders)
